# cashewless-desktop

./: CMakeLists.txt  desktop.cpp  desktop.h  plasma-containment-desktop.desktop
